istio/oidc-authservice/overlays/ekf/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice-web
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /authservice/
      rewrite:
        uri: "/"
      route:
        - destination:
            host: authservice.$(NAMESPACE).svc.cluster.local
            port:
              number: 8082
